Done Basic With some minor bug -Keyboard might not close after some action. -Didn't trigger API call to make changes on data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/Theme.Todo">
         <activity android:name=".Activity.ViewAllActivity"></activity>
         <activity android:name=".Activity.MainActivity"
-            android:windowSoftInputMode="stateAlwaysVisible">
+            android:windowSoftInputMode="stateHidden|adjustPan|stateAlwaysVisible"
+       >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
